# Go-JNI-Android

.github/workflows/: android.yml
GoJNIAndroid/: build.gradle  settings.gradle
GoJNIAndroid/app/: build.gradle
GoJNIAndroid/app/src/main/: AndroidManifest.xml
GoJNIAndroid/app/src/main/java/com/aghajari/: Native.java
GoJNIAndroid/app/src/main/jni/: CMakeLists.txt
GoJNIAndroid/app/src/main/jni/go/: build.sh  go.mod  test.go
